# DS5500-Detecting_AI_Generated_Images

./: .flake8  .gitattributes  .gitignore  .mailmap  README.md  pyproject.toml  requirements.txt
AIGI_notebooks/: AIGI-Detection-ResNet50.ipynb  AIGI-Detection_ViT.ipynb
aigi_runs/aigi_runs/: latest_vit
configs/: resnet50.local.yaml.example  resnet50.yaml  smoke_test.yaml  vit_b16.yaml
data/: README.md  __init__.py  dataset.py
data/splits/: df_test.csv  df_train.csv  df_val.csv
demo/: README.md  app.py
models/: README.md  __init__.py  model_factory.py  resnet.py  vit.py
notebooks/: AIGI-Detection-ResNet50.ipynb  AIGI-Detection_ViT.ipynb  GradCAM_workflow.ipynb
slurm/: README.md  submit_all.sh  train_resnet50.slurm  train_vit_b16.slurm
tests/: README.md  conftest.py  test_dataset.py  test_demo.py  test_integration.py  test_models.py  test_trainer.py  test_visualization.py
training/: README.md  train.py  trainer.py
visualization/: README.md  __init__.py  gradcam.py  visualize.py
